--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @plugin "daisyui" {
-  themes: light --default;
+  
 }
+
+@custom-variant dark (&:where([data-theme=night], [data-theme=night] *));
 
 .menu-navbar .active{
   color: green;
